[project]
name = "lerax"
version = "0.0.5"
description = "Deep Reinforcement Learning with JAX and Equinox."
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Theodore Pinkerton", email = "ted@tedpinkerton.ca" }]
dependencies = [
  "diffrax>=0.7.0",
  "distreqx>=0.0.2",
  "equinox>=0.13.3",
  "jax>=0.9.0",
  "jaxtyping>=0.3.6",
  "optax>=0.2.6",
  "rich>=14.3.1",
  "tensorboard>=2.20.0",
  "tensorboardX>=2.6.4",
]

[project.urls]
documentation = "https://lerax.tedpinkerton.ca/"
homepage = "https://lerax.tedpinkerton.ca/"
issues = "https://github.com/RunnersNum40/lerax/issues"
source = "https://github.com/RunnersNum40/lerax.git"

[project.optional-dependencies]
compatibility = [
  "gymnasium>=1.2.3",
  "stable-baselines3>=2.7.1",
  "gymnax>=0.0.9",
  "flax>=0.12.2",
]
docs = ["zensical>=0.0.19", "mkdocstrings-python>=2.0.1"]
mujoco = ["mujoco-mjx>=3.4.0"]
render = ["pygame>=2.6.1", "imageio>=2.37.2", "imageio-ffmpeg>=0.6.0"]

[dependency-groups]
dev = [
  "gymnasium>=1.2.3",
  "gymnax>=0.0.9",
  "mkdocstrings-python>=2.0.1",
  "mujoco-mjx>=3.4.0",
  "prek>=0.3.0",
  "pygame>=2.6.1",
  "pytest>=9.0.2",
  "pytest-cov>=7.0.0",
  "pytest-xdist>=3.8.0",
  "ruff>=0.14.14",
  "setuptools<79",
  "stable-baselines3>=2.7.1",
  "ty>=0.0.13",
  "zensical>=0.0.19",
]

# Kept for contributors that use pyright rather than ty
[tool.pyright]
reportIncompatibleVariableOverride = false  # Incompatible with eqx.AbstractVar
stubPath = "stubs"
include = ["src/**", "examples/**", "tests/**"]

[tool.pytest]
addopts = ["--cov=lerax", "--import-mode=importlib"]
strict = true
testpaths = ["tests"]

[tool.ruff]
exclude = ["stubs"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
fixable = ["I001", "F401"]
ignore = ["E402", "E721", "E731", "E741", "F722", "E501"]
select = ["E", "F", "I001"]

[tool.ty]
[tool.ty.rules]

[tool.ty.src]
include = ["src", "examples", "tests"]

[tool.ty.environment]
extra-paths = ["stubs"]

[tool.typos]
[tool.typos.files]
extend-exclude = ["stubs"]

[tool.uv]
package = true

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
